--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style/style.css" />
     <title>Me</title>
-</head>
+  </head>
 
-<body>
-    <h1>Hello Git</h1>
-</body>
-
+  <body>
+    <section>
+      <div class="primary">
+        <h1>My name is <span class="name">Sithu Kyaw</span></h1>
+        <button>About Me</button>
+      </div>
+      <div class="secondary">
+        <img src="./img/profile.svg" alt="me" srcset="" />
+      </div>
+    </section>
+  </body>
 </html>
