--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
   <body>
     <section>
       <div class="primary">
-        <h1>My name is <span class="name">Sithu Kyaw</span></h1>
-        <button>About Me</button>
+        <h1 class="filename">profile.yml</h1>
+        <h1 class="parent"><span>person</span>:</h1>
+        <h1 class="child"><span>name</span>: "Sithu Kyaw"</h1>
+        <h1 class="child"><span>occupation</span>: "Student"</h1>
+      </div>
+      <div class="primary-mobile">
+        <h2>profile.json</h2>
+        <h2>
+          {<br /><span class="key">name</span>:<span class="value"
+            >"Sithu Kyaw"</span
+          >,<br /><span class="key">occupation</span>:<span class="value"
+            >"Student"</span
+          ><br />}
+        </h2>
       </div>
       <div class="secondary">
         <img src="./img/profile.svg" alt="me" srcset="" />
