--- a/index.html
+++ b/index.html
@@ -9,25 +9,53 @@
 
   <body>
     <section>
-      <div class="primary">
-        <h1 class="filename">profile.yml</h1>
-        <h1 class="parent"><span>person</span>:</h1>
-        <h1 class="child"><span>name</span>: "Sithu Kyaw"</h1>
-        <h1 class="child"><span>occupation</span>: "Student"</h1>
+      <div class="landing">
+        <div class="primary">
+          <div class="greeting">
+            <h1>Hola,</h1>
+            <h2>I'm <span class="name">Sithu Kyaw</span></h2>
+          </div>
+        </div>
+        <div class="secondary">
+          <img src="./img/profile.svg" alt="me" srcset="" />
+        </div>
       </div>
-      <div class="primary-mobile">
-        <h2>profile.json</h2>
-        <h2>
-          {<br /><span class="key">name</span>:<span class="value"
-            >"Sithu Kyaw"</span
-          >,<br /><span class="key">occupation</span>:<span class="value"
-            >"Student"</span
-          ><br />}
-        </h2>
-      </div>
-      <div class="secondary">
-        <img src="./img/profile.svg" alt="me" srcset="" />
-      </div>
+      <main>
+        <div class="about">
+          <h1>About Me</h1>
+          <p>
+            My name is Sithu Kyaw, student at University of Information
+            Technology.<br />
+            I love web developement and containerization technology. I am
+            currently working with nodejs, react, docker and kubernetes....
+          </p>
+        </div>
+        <div class="skills">
+          <h1>Skills</h1>
+          <div class="skill-items">
+            <div class="dev">
+              <h2>Developement</h2>
+              <div class="items">
+                <p>nodejs</p>
+                <p>python</p>
+                <p>javascript</p>
+                <p>html</p>
+                <p>css</p>
+                <p>react</p>
+                <p>git</p>
+              </div>
+            </div>
+            <div class="ops">
+              <h2>Operation</h2>
+              <div class="items">
+                <p>docker</p>
+                <p>kubernetes</p>
+                <p>GCP <span>basic</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
     </section>
   </body>
 </html>
