--- a/index.html
+++ b/index.html
@@ -1,61 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style/style.css" />
-    <title>Me</title>
-  </head>
 
-  <body>
-    <section>
-      <div class="landing">
-        <div class="primary">
-          <div class="greeting">
-            <h1>Hola,</h1>
-            <h2>I'm <span class="name">Sithu Kyaw</span></h2>
-          </div>
-        </div>
-        <div class="secondary">
-          <img src="./img/profile.svg" alt="me" srcset="" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./style/style.css" />
+  <title>Me</title>
+</head>
+
+<body>
+  <section>
+    <div class="landing">
+      <div class="primary">
+        <div class="greeting">
+          <h1>Hola,</h1>
+          <h2>I'm <span class="name">Sithu Kyaw</span></h2>
         </div>
       </div>
-      <main>
-        <div class="about">
-          <h1>About Me</h1>
-          <p>
-            My name is Sithu Kyaw, student at University of Information
-            Technology.<br />
-            I love web developement and containerization technology. I am
-            currently working with nodejs, react, docker and kubernetes....
-          </p>
-        </div>
-        <div class="skills">
-          <h1>Skills</h1>
-          <div class="skill-items">
-            <div class="dev">
-              <h2>Developement</h2>
-              <div class="items">
-                <p>nodejs</p>
-                <p>python</p>
-                <p>javascript</p>
-                <p>html</p>
-                <p>css</p>
-                <p>react</p>
-                <p>git</p>
-              </div>
+      <div class="secondary">
+        <img src="./img/profile.svg" alt="me" srcset="" />
+      </div>
+    </div>
+    <main>
+      <div class="about">
+        <h1>About Me</h1>
+        <p>
+          My name is Sithu Kyaw, student at University of Information
+          Technology.<br />
+          I love web developement and containerization technology. I am
+          currently working with nodejs, react, docker and kubernetes....
+        </p>
+      </div>
+      <div class="skills">
+        <h1>Skills</h1>
+        <div class="skill-items">
+          <div class="dev">
+            <h2>Developement</h2>
+            <div class="items">
+
+              <p>MERN</p>
+              <p>python</p>
+              <p>git</p>
             </div>
-            <div class="ops">
-              <h2>Operation</h2>
-              <div class="items">
-                <p>docker</p>
-                <p>kubernetes</p>
-                <p>GCP <span>basic</span></p>
-              </div>
+          </div>
+          <div class="ops">
+            <h2>Operation</h2>
+            <div class="items">
+              <p>docker</p>
+              <p>kubernetes</p>
+              <p>GCP <span>basic</span></p>
             </div>
           </div>
         </div>
-      </main>
-    </section>
-  </body>
+      </div>
+    </main>
+  </section>
+</body>
+
 </html>
