--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h1>Skills</h1>
         <div class="skill-items">
           <div class="dev">
-            <h2>Developement</h2>
+            <h2>Dev</h2>
             <div class="items">
 
               <p>MERN</p>
@@ -45,7 +45,7 @@
           </div>
           <hr>
           <div class="ops">
-            <h2>Operation</h2>
+            <h2>Ops</h2>
             <div class="items">
               <p>docker</p>
               <p>kubernetes</p>
