--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>I'm <span>Sithu Kyaw</span></h1>
 
             <p>
-              Professtional trash who pretend to be
+              Professional trash who pretend to be
               <span>Full-Stack Dev</span> and <span>Dev-Ops</span>
             </p>
           </div>
