--- a/index.html
+++ b/index.html
@@ -24,22 +24,20 @@
             <h1>I'm <span>Sithu Kyaw</span></h1>
 
             <p>
-              Professional trash who pretends to be
-              <span>Full-Stack Dev</span> and <span>Dev-Ops</span>
+              Professional trash pretending to be engineer-ish. Mostly just breaks stuff.
             </p>
           </div>
         </div>
         <div class="about" id="about">
           <div><h1>Who am I?</h1></div>
           <p class="intro">
-            My name is Sithu Kyaw, Student at University of Information
-            Techonology
-            <br />
-            Useless douchebag and brainless twat
-            <br />
-            Introvert and non existence piece of shit
-            <br />
-            Does nothing much but <span>MERN Stack</span>
+            Name’s Sithu Kyaw. Technically a former student at the University of Information Technology — not that it matters. I just throw the name around to make it sound like I had a plan at some point.
+
+I somehow convince myself I’m doing “deep Linux stuff,” messing with networks I barely understand, and writing backend code in like I’m deploying to Mars and also sprinkling in some DevOps and DevSecOps buzzwords to sound employable.
+
+Basically the human version of a half-loaded man page and still talks like building the next Google from laptop that sounds like it’s about to take off every time he opens VS Code.
+
+A jack of all trades, master of none, enthusiast of everything I half understands.
           </p>
           <!-- <button>Download my CV</button> -->
         </div>
