--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 I somehow convince myself I’m doing “deep Linux stuff,” messing with networks I barely understand, and writing backend code in like I’m deploying to Mars and also sprinkling in some DevOps and DevSecOps buzzwords to sound employable.
 
-Basically the human version of a half-loaded man page and still talks like building the next Google from laptop that sounds like it’s about to take off every time I opens VS Code.
+Basically the human version of a half-loaded man page, and still talks like he’s building the next Google from a laptop that sounds like it’s about to take off every time VS Code is running.
 
 A jack of all trades, master of none, enthusiast of everything I half understands.
           </p>
