[fix] the perspective

--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
                 <p>
                   Basically the human version of a half-loaded man page and
                   still talks like building the next Google from laptop that
-                  sounds like it’s about to take off every time he opens VS
-                  Code.
+                  sounds like it’s about to take off every time VSCode is
+                  running.
                 </p>
                 <p>
                   A jack of all trades, master of none, enthusiast of everything
