--- a/index.html
+++ b/index.html
@@ -67,25 +67,25 @@
           <li>
             <a href="#home" class="nav-link">
               <i class="fas fa-home"></i>
-              <span>home</span>
+              <span>HOME</span>
             </a>
           </li>
           <li>
             <a href="#about" class="nav-link">
               <i class="fas fa-user-secret"></i>
-              <span>about</span>
+              <span>ABOUT</span>
             </a>
           </li>
           <li>
             <a href="#skills" class="nav-link">
               <i class="fas fa-network-wired"></i>
-              <span>skills</span>
+              <span>SKILLS</span>
             </a>
           </li>
           <li>
             <a href="#contact" class="nav-link">
               <i class="fas fa-terminal"></i>
-              <span>contact</span>
+              <span>CONTACT</span>
             </a>
           </li>
         </ul>
@@ -238,7 +238,7 @@
                   <span class="btn-minimize"></span>
                   <span class="btn-maximize"></span>
                 </div>
-                <div class="terminal-title">skill_lists</div>
+                <div class="terminal-title">skill lists</div>
               </div>
               <div class="terminal-body">
                 <div class="contact-line">
@@ -337,7 +337,7 @@
                   <div class="channel-list">
                     <div class="channel-item">
                       <i class="fas fa-envelope"></i>
-                      <span>Secure Mail:</span>
+                      <span>Mail:</span>
                       <a
                         href="mailto:sithukyaw27500@gmail.com"
                         class="cyber-link"
@@ -348,7 +348,7 @@
 
                     <div class="channel-item">
                       <i class="fab fa-twitter"></i>
-                      <span>Data Stream:</span>
+                      <span>X:</span>
                       <a
                         href="https://twitter.com/Sithukyaw666"
                         class="cyber-link"
@@ -359,7 +359,7 @@
 
                     <div class="channel-item">
                       <i class="fab fa-github"></i>
-                      <span>Code Repository:</span>
+                      <span>Github:</span>
                       <a
                         href="https://github.com/Sithukyaw666"
                         class="cyber-link"
