[fix] update some ui flaws

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               <i class="fas fa-home"></i>
               Home
             </button>
-            <button class="terminal-toggle" onclick="openTerminalWidget()">
+            <button class="terminal-toggle" onclick="enterTerminal()">
               <i class="fas fa-terminal"></i>
               Terminal
             </button>
@@ -434,7 +434,7 @@
       </footer>
     </div>
 
-    <!-- Terminal Widget -->
+    <!-- Terminal Widget
     <div id="terminal-widget" class="terminal-widget hidden">
       <div class="widget-header">
         <span class="widget-title">
@@ -458,7 +458,7 @@
           <span class="terminal-cursor">█</span>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Scripts -->
     <script src="./portfolio.js"></script>
